# antropy

./: .gitignore  docker-compose.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  create_admin.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/core/: backends.py  models.py  permissions.py  serializers.py  views.py
backend/tests/: test_bookings.py
